--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-     <title>a.a.k.b.n ,Telangapada</title>
+     <title>a.a.k.b.n ,telangapada</title>
   </head>
   <body>
   
